--- a/main.html
+++ b/main.html
@@ -32,11 +32,13 @@
           <i class="far fa-paper-plane fa-lg"></i>
           <i class="far fa-compass fa-lg"></i>
           <i class="far fa-heart fa-lg"></i>
-          <img
-            class="profile-icon"
-            src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/116375184_328144491547983_2210838736919277781_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=tfcdoLqkf_AAX8PnjQI&oh=009254efb261005ebcd9f89ff5427097&oe=5F92DD69"
-            class="main-navbar__menuicon"
-          />
+          <button>
+            <img
+              class="profile-icon"
+              src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/116375184_328144491547983_2210838736919277781_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=tfcdoLqkf_AAX8PnjQI&oh=009254efb261005ebcd9f89ff5427097&oe=5F92DD69"
+              class="main-navbar__menuicon"
+            />
+          </button>
         </div>
       </div>
     </nav>
@@ -44,6 +46,22 @@
     <main class="feeds-main">
       <section class="feeds-main__section">
         <div class="feeds">
+          <div class="storys__container">
+            <div class="story">
+              <img
+                class="story__profile"
+                src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/64219646_866712363683753_7365878438877462528_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=1KpbY1ZwmC4AX9Bnmwg&oh=6bea07c85fb972c49c4badd639db4dfb&oe=5F969670"
+              />
+              <span class="story__ID">wecode</span>
+            </div>
+            <div class="story">
+              <img
+                class="story__profile"
+                src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/64219646_866712363683753_7365878438877462528_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=1KpbY1ZwmC4AX9Bnmwg&oh=6bea07c85fb972c49c4badd639db4dfb&oe=5F969670"
+              />
+              <span class="story__ID">wecode</span>
+            </div>
+          </div>
           <article class="feed">
             <header class="feed-header__conrainer">
               <div class="profile-container">
@@ -65,7 +83,9 @@
             <section class="feed__contents-container">
               <div class="contents-container__btns">
                 <div class="contents-container__btn-trio">
-                  <button class="contents-container__btn"></button>
+                  <button
+                    class="contents-container__btn contents-container__likeBtn"
+                  ></button>
                   <button class="contents-container__btn">
                     <img
                       src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/comment.png"
